[tool.poetry]
name = "bmc_api"
version = "0.0.0"
description = ""
authors = ["dhsavell"]
license = "MPL-2.0"

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.47.1"
cacheout = "^0.11.2"
python-multipart = "^0.0.5"
uvicorn = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
